tests/snapshots/run_wpt_conformance__trtx_equal_float16_4D_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "equal.https.any.js",
    "equal float16 4D tensors",
    "trtx",
    Failed {
        msg: Some(
            "equal :: equal float16 4D tensors: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputB: [2.806640625, 5.58984375, -4.83984375, 4.99609375, 0.97265625, -6.171875, 2.806640625, 5.58984375, 7.765625, -4.30859375, -5.89453125, -8.53125, 2.806640625, 5.58984375, 0.1783447265625, -4.48046875, 0.68212890625, -6.6875, 2.806640625, 5.58984375, -9.0390625, -1.97265625, -3.01171875, 3.626953125]; inputA: [2.806640625, 5.58984375, 2.85546875, 4.99609375, 0.97265625, -4.7421875, 2.806640625, 5.58984375, -5.109375, 6.625, -2.3203125, -7.0546875, 2.806640625, 5.58984375, 4.98046875, -5.44140625, 1.1455078125, 7.7734375, 2.806640625, 5.58984375, -6.24609375, -2.849609375, -2.6953125, 5.81640625]\n  expected output: [1, 1, 0, 1, 1, 0, 1, 1, 0, 0 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 128, 63, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 1, 0, 1, 1, 0, 1, 1, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 128, 63, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[2, 2, 2, 3];\n    inputB: f16[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = equal(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
