tests/snapshots/run_wpt_conformance__trtx_equal_float16_broadcast_0D_to_4D.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "equal.https.any.js",
    "equal float16 broadcast 0D to 4D",
    "trtx",
    Failed {
        msg: Some(
            "equal :: equal float16 broadcast 0D to 4D: index 0: actual=0 expected=1 tolerance=0\n  inputs: inputA: [2.806640625]; inputB: [2.806640625, 5.58984375, 2.85546875, 4.99609375, 0.97265625, -4.7421875, 2.806640625, 5.58984375, -5.109375, 6.625, -2.3203125, -7.0546875, 2.806640625, 5.58984375, 4.98046875, -5.44140625, 1.1455078125, 7.7734375, 2.806640625, 5.58984375, -6.24609375, -2.849609375, -2.6953125, 5.81640625]\n  expected output: [1, 0, 0, 0, 0, 0, 1, 0, 0, 0 ...] (len=24)\n  actual output: [0, 0, 128, 63, 0, 0, 0, 0, 0, 0 ...] (len=24)\n  expected output full nd:\n[1, 0, 0, 0, 0, 0, 1, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n  actual output full nd:\n[0, 0, 128, 63, 0, 0, 0, 0, 0, 0, ...] (len=24, shape=[2, 2, 2, 3])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[];\n    inputB: f16[2, 2, 2, 3];\n  }\n\n  nodes {\n    [output] = equal(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
